# msg-dvr

./: .gitignore  CMakeLists.txt  README.md  build.sh  cleanup.sh
include/: chat.hpp  session.hpp  socket_client.hpp  socket_metadata_client.hpp  socket_server.hpp  user.hpp
src/: temp.cpp
src/client/: chat.cpp  main-old.cpp  main.cpp  user.cpp
src/client/socket/: metadata.cpp  socket.cpp
src/server/: main.cpp  session.cpp  socket.cpp
